Invisible Typing Button fix

--- a/BetterDiscord/main.css
+++ b/BetterDiscord/main.css
@@ -1165,7 +1165,7 @@ div.BetterInvites-iconWrapper > div > img {border-radius: var(--avatar-radius) !
 }
 
 /* Invisible Typing Plugin Button */
-.buttons-uaqb-5 .IT-button {
+.buttons-uaqb-5 .IT-button, .invisible-typing-button {
   display: var(--Invisible-Typing-Bar-Toggle-Icon);
   background: var(--channeltextarea-background);
   margin: 0px;
